--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="description" content="Tutorial">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script defer src="script.js"></script>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -15,17 +16,28 @@
         <nav class="header">
             <div class="container">
                 <h1>Fixxo.</h1>
-                <div>
+                <div class="links">
                     <a href="#">Home</a>
                     <a href="#">Categories</a>
                     <a href="#">Products</a>
                     <a href="#">Contacts</a>
                 </div>
-                <div>
-                    <button><i class="fa-regular fa-magnifying-glass"></i></button>
-                    <button><i class="fa-light fa-code-compare"></i></button>
-                    <button><i class="fa-regular fa-heart"></i></button>
-                    <button><i class="fa-light fa-bag-shopping"></i></button>
+                <div class="round-buttons">
+                    <button id="search">
+                        <i class="fa-regular fa-magnifying-glass"></i>
+                    </button>
+                    <button>
+                        <span class="badge rounded-pill">5</span>
+                        <i class="fa-light fa-code-compare"></i>
+                    </button>
+                    <button>
+                        <span class="badge rounded-pill">5</span>
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
+                    <button id="cart">
+                        <span class="badge rounded-pill">5</span>
+                        <i class="fa-light fa-bag-shopping"></i>
+                    </button>
                 </div>
             </div>
         </nav>
@@ -34,18 +46,18 @@
     <section class="showcase">
         <div class="container">
             <div class="showcase-body">
-                <img src="" alt="">
+                <img src="images/showcase-image-1.svg" alt="">
                 <div>
                     <h1>SALE UP</h1>
                     <h1>To 50% Off</h1>
                     <p>Online shopping free home delivery over $100</p>
                     <button class="btn">SHOP NOW</button>
                 </div>
-                <img src="" alt="">
+                <img src="images/showcase-image-2.svg" alt="">
             </div>
         </div>
     </section>
     
-    <script src="script.js"></script>
+    
 </body>
 </html>
