--- a/contacts.html
+++ b/contacts.html
@@ -4,53 +4,51 @@
     <meta charset="UTF-8">
     <meta name="description" content="Tutorial">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fixxo.</title>
     <script src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <script defer src="script.js"></script>
-    <link href="css/style.min.css" rel="stylesheet">
+    <script defer src="assets/js/script.js"></script>
+    <link href="assets/css/style.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="header header-white">
-            <div class="container">
-                <div class="logotype">
-                    <a href="index.html">Fixxo.</a>
-                </div>
-                <div class="links">
-                    <a href="index.html">Home</a>
-                    <a href="#">Categories</a>
-                    <a href="#">Products</a>
-                    <a href="contacts.html">Contacts</a>
-                </div>
-                <div class="round-buttons">
-                    <button id="search">
-                        <i class="fa-regular fa-magnifying-glass"></i>
-                    </button>
-                    <button>
-                        <span class="badge rounded-pill">5</span>
-                        <i class="fa-light fa-code-compare"></i>
-                    </button>
-                    <button>
-                        <span class="badge rounded-pill">5</span>
-                        <i class="fa-regular fa-heart"></i>
-                    </button>
-                    <button id="cart">
-                        <span class="badge rounded-pill">5</span>
-                        <i class="fa-light fa-bag-shopping"></i>
-                    </button>
-                </div>
+    <section>
+        <nav class="__navbar __navbar-white container">
+            <div class="logotype">
+                <a href="index.html">Fixxo.</a>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="#">Categories</a>
+                <a href="#">Products</a>
+                <a href="contacts.html">Contacts</a>
+            </div>
+            <div class="nav-icon-links">
+                <a href="#" id="search">
+                    <i class="fa-regular fa-magnifying-glass"></i>
+                </a>
+                <a href="#">
+                    <span class="badge rounded-pill">5</span>
+                    <i class="fa-light fa-code-compare"></i>
+                </a>
+                <a href="#">
+                    <span class="badge rounded-pill">5</span>
+                    <i class="fa-regular fa-heart"></i>
+                </a>
+                <a href="#" id="cart">
+                    <span class="badge rounded-pill">5</span>
+                    <i class="fa-light fa-bag-shopping"></i>
+                </a>
             </div>
         </nav>
-    </header>
+    </section>
 
     <section class="site-title">
         <i class="fa-sharp fa-solid fa-house"></i>
         <span>Contacts</span>
     </section>
     
-    <img class="map" src="./images/map.png" alt="location map">
+    <img class="map" src="./assets/images/map.png" alt="location map">
 
     <section class="contact-us">
         <h1>Come in Contact with Us</h1>
