--- a/contacts.html
+++ b/contacts.html
@@ -71,7 +71,11 @@
                         <div id="contactUsComments-error" class="text-danger"></div>
                     </div>
                 </div>
-                <button type="submit" class="btn btn-theme">Post Comments</button>                
+                <button type="submit" class="btn btn-theme">
+                    <div class="btn-theme-box-left"></div>
+                    Post Comments
+                    <div class="btn-theme-box-right"></div>
+                </button>                
             </form>
         </div>
     </section>
