--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
                     <h1>SALE UP</h1>
                     <h1>To 50% Off</h1>
                     <p>Online shopping free home delivery over $100</p>
-                    <button class="btn btn-theme">SHOP NOW</button>
+                    <a href="#" class="btn btn-theme">
+                        <div class="btn-theme-box-left"></div>
+                        SHOP NOW
+                        <div class="btn-theme-box-right"></div>
+                    </a>
                 </div>
                 <img src="assets/images/showcase-image-2.svg" alt="">
             </div>
