Created the featured products with the cards and hovering effects

--- a/contacts.html
+++ b/contacts.html
@@ -43,16 +43,18 @@
         </nav>
     </section>
 
-    <section class="site-title">
-        <i class="fa-sharp fa-solid fa-house"></i>
-        <span>Contacts</span>
+    <section class="site-title container">
+        <div>
+            <i class="fa-sharp fa-solid fa-house"></i>
+            <span>Contacts</span>
+        </div>
     </section>
     
     <img class="map" src="./assets/images/map.png" alt="location map">
 
-    <section class="contact-us">
-        <h1>Come in Contact with Us</h1>
+    <section class="contact-us container">
         <div class="form">
+            <h1>Come in Contact with Us</h1>
             <form id="contactUsForm" onsubmit="onSubmit(event)" novalidate>
                 <div class="grid">
                     <div class="contactUsName">
