--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </a>
                 <a href="#">
                     <span class="badge rounded-pill">5</span>
-                    <i class="fa-light fa-code-compare"></i>
+                    <i class="fa-regular fa-code-compare"></i>
                 </a>
                 <a href="#">
                     <span class="badge rounded-pill">5</span>
@@ -37,7 +37,7 @@
                 </a>
                 <a href="#" id="cart">
                     <span class="badge rounded-pill">5</span>
-                    <i class="fa-light fa-bag-shopping"></i>
+                    <i class="fa-regular fa-bag-shopping"></i>
                 </a>
             </div>
         </nav>
@@ -70,6 +70,270 @@
             <img src="/assets/images/showcase-new-arrivals.svg" alt="">
         </div>
     </section>
+
+
+    <section class="featured-products container">
+        <div class="row row-cols-md-4">
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-theme-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-theme-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$40.00</span>
+                            <span class="card-discount-price">$35.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    
 
 
     <footer>
