added the title for featured products

--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
         </div>
     </section>
 
+    
 
     <section class="featured-products container">
+        <h1>Featured Product</h1>
         <div class="row row-cols-md-4">
             <div class="col">
                 <div class="__card">
@@ -100,8 +102,8 @@
                             <i class="fa-sharp fa-solid fa-star"></i>
                         </div>
                         <div class="card-price">
-                            <span class="card-old-price">$40.00</span>
-                            <span class="card-discount-price">$35.00</span>
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
                         </div>
                     </div>
                 </div>
