--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="index.html">Fixxo.</a>
             </div>
             <div class="nav-links">
-                <a href="index.html">Home</a>
+                <a href="index.html" class="active-link">Home</a>
                 <a href="#">Categories</a>
                 <a href="#">Products</a>
                 <a href="contacts.html">Contacts</a>
@@ -70,8 +70,6 @@
             <img src="/assets/images/showcase-new-arrivals.svg" alt="">
         </div>
     </section>
-
-    
 
     <section class="featured-products container">
         <h1>Featured Product</h1>
@@ -335,7 +333,6 @@
         </div>
     </section>
 
-    
 
 
     <footer>
