--- a/index.html
+++ b/index.html
@@ -333,6 +333,63 @@
         </div>
     </section>
 
+    <section class="top-picks container">
+        <div class="box-left">
+            <img src="/assets/images/pamela-reif-top-picks.svg" alt="">
+            <div>
+                <h1>Pamela Reif's</h1>
+                <h1>Top Picks</h1>
+                <a href="#" class="btn btn-theme-dark">
+                    <div class="btn-theme-box-left"></div>
+                    SHOP NOW
+                    <div class="btn-theme-box-right"></div>
+                </a>
+            </div>
+        </div>
+        <div class="box-right">
+            <div>
+                <h1>Let's Be</h1>
+                <h1>Conscious</h1>
+                <a href="#" class="btn btn-white">
+                    <div class="btn-theme-box-left"></div>
+                    FLASH SALE
+                    <div class="btn-theme-box-right"></div>
+                </a>
+            </div>
+            <img src="/assets/images/lets-be-conscious.svg" alt="">
+        </div>
+    </section>
+
+
+    <section class="our-speciality">
+        <div class="container">
+            <h1>Our Speciality</h1>
+            <div>
+                <div class="box-left">
+
+                </div>
+                <div class="box-right">
+
+                </div>
+            </div>
+            <div>
+                <div class="box-left">
+
+                </div>
+                <div class="box-right">
+
+                </div>
+            </div>
+            <div>
+                <div class="box-left">
+
+                </div>
+                <div class="box-right">
+
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <footer>
@@ -347,7 +404,5 @@
             <span>© 2022 Fixxo. All Rights Reserved</span>
         </div>
     </footer>
-    
-    
 </body>
 </html>
