started working on special deals

--- a/contacts.html
+++ b/contacts.html
@@ -76,9 +76,9 @@
                     </div>
                 </div>
                 <button type="submit" class="btn btn-theme">
-                    <div class="btn-theme-box-left"></div>
+                    <div class="btn-box-left"></div>
                     Post Comments
-                    <div class="btn-theme-box-right"></div>
+                    <div class="btn-box-right"></div>
                 </button>                
             </form>
         </div>
