--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <h1>To 50% Off</h1>
                     <p>Online shopping free home delivery over $100</p>
                     <a href="#" class="btn btn-theme">
-                        <div class="btn-theme-box-left"></div>
+                        <div class="btn-box-left"></div>
                         SHOP NOW
-                        <div class="btn-theme-box-right"></div>
+                        <div class="btn-box-right"></div>
                     </a>
                 </div>
                 <img src="assets/images/showcase-image-2.svg" alt="">
@@ -78,9 +78,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -110,9 +110,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -142,9 +142,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -174,9 +174,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -206,9 +206,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -238,9 +238,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -270,9 +270,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -302,9 +302,9 @@
                 <div class="__card">
                     <div class="__card-top">
                         <a href="#" class="btn btn-theme">
-                            <div class="btn-theme-box-left"></div>
+                            <div class="btn-box-left"></div>
                             QUICK VIEW
-                            <div class="btn-theme-box-right"></div>
+                            <div class="btn-box-right"></div>
                         </a>
                         <ul class="card-menu">
                             <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
@@ -340,9 +340,9 @@
                 <h1>Pamela Reif's</h1>
                 <h1>Top Picks</h1>
                 <a href="#" class="btn btn-theme-dark">
-                    <div class="btn-theme-box-left"></div>
+                    <div class="btn-box-left"></div>
                     SHOP NOW
-                    <div class="btn-theme-box-right"></div>
+                    <div class="btn-box-right"></div>
                 </a>
             </div>
         </div>
@@ -351,9 +351,9 @@
                 <h1>Let's Be</h1>
                 <h1>Conscious</h1>
                 <a href="#" class="btn btn-white">
-                    <div class="btn-theme-box-left"></div>
+                    <div class="btn-box-left"></div>
                     FLASH SALE
-                    <div class="btn-theme-box-right"></div>
+                    <div class="btn-box-right"></div>
                 </a>
             </div>
             <img src="/assets/images/lets-be-conscious.svg" alt="">
@@ -365,27 +365,231 @@
         <div class="container">
             <h1>Our Speciality</h1>
             <div>
-                <div class="box-left">
-
+                <div class="box-track-order">
+                    <div class="box-left">
+                        <h1>Track your order</h1>
+                        <a href="#">Get started ></a>
+                    </div>
+                    <div class="box-right"></div>
                 </div>
-                <div class="box-right">
-
+                <div class="box-make-return">
+                    <div class="box-left">
+                        <h1>Make a Return</h1>
+                        <a href="#">Get started ></a>
+                    </div>
+                    <div class="box-right"></div>
+                </div>
+                <div class="box-price-adjustment">
+                    <div class="box-left">
+                        <h1>Request a Price Adjustment</h1>
+                        <a href="#">Get started ></a>
+                    </div>
+                    <div class="box-right"></div>
                 </div>
             </div>
-            <div>
-                <div class="box-left">
+        </div>
+    </section>
 
-                </div>
-                <div class="box-right">
-
+    <section class="special-deal container">
+        <div class="flash-sale">
+            <h1></h1>
+            <a href="#" class="btn btn-white">
+                <div class="btn-box-left"></div>
+                FLASH SALE
+                <div class="btn-box-right"></div>
+            </a>
+        </div>
+        <div class="row row-cols-md-2">
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div>
-                <div class="box-left">
-
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="box-right">
-
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="__card">
+                    <div class="__card-top">
+                        <a href="#" class="btn btn-theme">
+                            <div class="btn-box-left"></div>
+                            QUICK VIEW
+                            <div class="btn-box-right"></div>
+                        </a>
+                        <ul class="card-menu">
+                            <a href="#"><li><i class="fa-regular fa-heart"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-code-compare"></i></li></a>
+                            <a href="#"><li><i class="fa-regular fa-bag-shopping"></i></li></a>
+                        </ul>
+                        <img src="" class="card-img-top" alt="">
+                    </div>
+                    <div class="__card-body">
+                        <h5 class="card-title">Category</h5>
+                        <h3>Modern Black Blouse</h3>
+                        <div class="product-rating">
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                            <i class="fa-sharp fa-solid fa-star"></i>
+                        </div>
+                        <div class="card-price">
+                            <span class="card-old-price">$400.00</span>
+                            <span class="card-discount-price">$350.00</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
