updated special deals

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/css/style.min.css" rel="stylesheet">
 </head>
 <body>
-    <section class="header">
+    <section class="header d-none">
         <nav class="__navbar container">
             <div class="logotype">
                 <a href="index.html">Fixxo.</a>
@@ -43,7 +43,7 @@
         </nav>
     </section>
 
-    <section class="showcase">
+    <section class="showcase d-none">
         <div class="container">
             <div class="showcase-body">
                 <img src="assets/images/showcase-image-1.svg" alt="">
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <section class="new-arrivals container">
+    <section class="new-arrivals container d-none">
         <div class="clearance">
             <img src="/assets/images/showcase-winter-clearance.svg" alt="">
         </div>
@@ -73,10 +73,10 @@
 
     <section class="featured-products container">
         <h1>Featured Product</h1>
-        <div class="row row-cols-md-4">
+        <div class="row row-cols-4">
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -89,7 +89,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -107,8 +107,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -121,7 +121,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -139,8 +139,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -153,7 +153,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -171,8 +171,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -185,7 +185,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -203,8 +203,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -217,7 +217,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -235,8 +235,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -249,7 +249,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -267,8 +267,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -281,7 +281,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -299,8 +299,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -313,7 +313,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -333,7 +333,7 @@
         </div>
     </section>
 
-    <section class="top-picks container">
+    <section class="top-picks container d-none">
         <div class="box-left">
             <img src="/assets/images/pamela-reif-top-picks.svg" alt="">
             <div>
@@ -359,7 +359,6 @@
             <img src="/assets/images/lets-be-conscious.svg" alt="">
         </div>
     </section>
-
 
     <section class="our-speciality">
         <div class="container">
@@ -392,17 +391,17 @@
 
     <section class="special-deal container">
         <div class="flash-sale">
-            <h1></h1>
+            <h1>2 FOR USD $29</h1>
             <a href="#" class="btn btn-white">
                 <div class="btn-box-left"></div>
                 FLASH SALE
                 <div class="btn-box-right"></div>
             </a>
         </div>
-        <div class="row row-cols-md-2">
+        <div class="row row-cols-2">
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -415,7 +414,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -433,8 +432,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -447,7 +446,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -465,8 +464,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -479,7 +478,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -497,8 +496,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -511,7 +510,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -529,8 +528,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -543,7 +542,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -561,8 +560,8 @@
                 </div>
             </div>
             <div class="col">
-                <div class="__card">
-                    <div class="__card-top">
+                <div class="card">
+                    <div class="card-top">
                         <a href="#" class="btn btn-theme">
                             <div class="btn-box-left"></div>
                             QUICK VIEW
@@ -575,7 +574,7 @@
                         </ul>
                         <img src="" class="card-img-top" alt="">
                     </div>
-                    <div class="__card-body">
+                    <div class="card-body">
                         <h5 class="card-title">Category</h5>
                         <h3>Modern Black Blouse</h3>
                         <div class="product-rating">
@@ -592,9 +591,9 @@
                     </div>
                 </div>
             </div>
+            
         </div>
     </section>
-
 
     <footer>
         <div class="social-media">
